sliding thrid level menu out right to avoid going off screen on mobile

--- a/style.scss
+++ b/style.scss
@@ -609,7 +609,7 @@ header {
 
           ul {
             top: 5px;
-            left: 100%;
+            left: -100%;
           }
         }
 
